# vscode-wait-for-process

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package.json
helper/: CMakeLists.txt  main.cc
src/: extension.ts
